# cbor-json

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: on_push.yml
cbor_json/: __init__.py  _cbor_json_codecs.py  _custom_objects_base.py  custom_objects.py
tests/: test_all.py
tests/cbor-test-vectors/: README.md  appendix_a.json  ext_jsons.json
