[tool.poetry]
name = "cbor-json"
#module = "cbor_json"
#dist-name = "cbor-json"
version = "0.0.4"
description = "Three-way conversion between 'native' Python data representation, CBOR, and JSON"
authors = ["Alexander Maslyeav <maslyaev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/amaslyaev/cbor-json/"
repository = "https://github.com/amaslyaev/cbor-json/"
documentation = ""
keywords = []
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.7"
cbor2 = "^5.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
pandas = "*"
pylint = "^2.9.5"
coverage-badge = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
